--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
     <div class="joinCreateResponse">
         <button class="dismissMsg"><i class="fa-solid fa-xmark"></i></button>
-        <div class="resText">Your msg will appear over here. and this just dummy text will be replaced later.</div>
-        <button class="play">Start</button>
+        <div class="resText">Your message will appear over here and this is just a dummy text, will be replaced later.</div>
+        <button class="play">Waiting...</button>
     </div>
     <div class="mainBody">
         <div id="nav">
@@ -70,13 +70,14 @@
                 </div>
                 <div class="faces">Heads</div>
                 <div class="faces">Tails</div>
-                <div id="update">Memes</div>
+                <div id="update">Updates</div>
             </div>
         </div>
         <div class="main">
             <div class="gameover">
                 <p id="result">Match is drawn!</p>
                 <button id="rematch">Play Again!</button>
+                <button id="exit">Exit</button>
             </div>
             <button class="box" id="box1">1</button>
             <button class="box" id="box2">2</button>
